@@ -1,3 +1,9 @@
+2008-06-04  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* linux-arm-low.c (thumb_breakpoint, thumb_breakpoint_len): New.
+	(arm_breakpoint_at): Handle Thumb.
+	(the_low_target): Add comment.
+
 2008-05-29  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* linux-ppc-low.c (ppc_collect_ptrace_register): Clear buffer.
